<resources>
    <string name="app_name">摇钱树</string>


    <string name="navigation_bar_title">标题</string>
    <string name="register_welcome">欢迎你！</string>
    <string name="register">注册</string>
    <string name="register_input_phone_num">请输入手机号码</string>
    <string name="third_party_login">第三方登录</string>
    <string name="login_protocol">服务条款和隐私政策</string>
    <string name="login_protocol_has_read">登录即代表您已阅读并同意</string>
    <string name="next_step">下一步</string>
    <string name="verification_code_has_been_send">验证码已发送到</string>
    <string name="confirm_to_register">确认注册</string>
    <string name="set_initial_password">设置初始密码</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="and">和</string>
    <string name="terms_of_service">服务条款</string>
    <string name="registration_means_you_have_read_and_agree">注册即代表您已阅读并同意</string>
    <string name="set_combination_password">注：请设置6~16位字母加数字组合密码</string>
    <string name="real_name">真实姓名</string>
    <string name="confirm_to_submit">确认提交</string>
    <string name="id_number">身份证号</string>
    <string name="real_name_authentication">实名认证</string>
    <string name="authentication_to_earning_profits">实名认证看广告赚收益~</string>
    <string name="skin_to_authenticate">跳过认证</string>
    <string name="register_success">恭喜您，注册成功！</string>
    <string name="confirm">确认</string>
    <string name="input_new_password_again">请再次输入新密码</string>
    <string name="new_password">新密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="verification_code">验证码</string>
    <string name="login_phone_number">登录手机号</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="SMS_login">短信验证码登录</string>
    <string name="login">登录</string>
    <string name="input_password">请输入密码</string>
    <string name="password_login">密码码登录</string>
    <string name="input_verification_code">请输入验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="information">资讯</string>
    <string name="customer_service">客服服务</string>
    <string name="business_cooperation">商务合作</string>
    <string name="invite_friends">邀请好友</string>
    <string name="my_collection">我的收藏</string>
    <string name="balance">余额</string>
    <string name="accumulated_income">累计收益（元）</string>
    <string name="make_more_money">邀请好友赚取更多收益</string>
    <string name="personal_data">个人资料</string>
    <string name="withdraw">提现</string>
    <string name="withdraw_now">立即提现</string>
    <string name="brand_giant">品牌巨头</string>
    <string name="finance">金融</string>
    <string name="game">游戏</string>
    <string name="education">教育</string>
    <string name="health_beauty">美容保健</string>
    <string name="estate">地产</string>
    <string name="immigration">移民</string>
    <string name="all">全部</string>
    <string name="clothes">服式</string>
    <string name="food">食品</string>
    <string name="cate">美食</string>
    <string name="entertainment">休闲娱乐</string>
    <string name="travel">旅游</string>
    <string name="accommodation">住宿</string>
    <string name="traffic">交通</string>
    <string name="digital_appliance">家电数码</string>
    <string name="synthesis">综合</string>
    <string name="milk_tea">奶茶</string>
    <string name="beauty">美容</string>
    <string name="education_training">教育培训</string>
    <string name="car_maintenance">汽车保养</string>
    <string name="building_shop">楼宇商铺</string>
    <string name="women_clothing">女装</string>
    <string name="women_shoes">女鞋</string>
    <string name="men_clothing">男装</string>
    <string name="men_shoes">男鞋</string>
    <string name="underwear">内衣</string>
    <string name="mother_infant">母婴</string>
    <string name="luggage">箱包</string>
    <string name="sport">运动</string>
    <string name="outdoor">户外</string>
    <string name="other">其他</string>

    <string name="skin_care">护肤</string>
    <string name="breast_enhancement">丰胸</string>
    <string name="speckle">驱斑</string>
    <string name="aphrodisiac">壮阳</string>
    <string name="health_care_products">保健品</string>
    <string name="phone">手机</string>
    <string name="refrigerator">冰箱</string>
    <string name="television">电视</string>
    <string name="computer">电脑</string>
    <string name="air_conditioner">空调</string>
    <string name="microwave_oven">微波炉</string>
    <string name="sterilized_cupboard">消毒碗柜</string>
    <string name="electric_fan">电风扇</string>
    <string name="washing_machine">洗衣机</string>
    <string name="plane">飞机</string>
    <string name="train">火车</string>
    <string name="car">汽车</string>
    <string name="steamer">轮船</string>
    <string name="bike">自行车</string>
    <string name="sight_seeing_tour">游山玩水</string>
    <string name="theme_tour">主题游</string>
    <string name="farmhouse">农家乐</string>
    <string name="parent_child_tour">亲子游</string>
    <string name="comprehensive_tour">综合游</string>

    <string name="tea_wine">茶酒</string>
    <string name="office_furniture">办公家装</string>
    <string name="toy">玩具</string>
    <string name="books">图书</string>
    <string name="makeups">美妆</string>
    <string name="flower_gardening">鲜花园艺</string>
    <string name="car_motorcycle">汽车摩托</string>
    <string name="medicine">医药</string>
    <string name="instrument">乐器</string>

    <string name="content_detail">内容详情</string>
    <string name="error">出错了！</string>
    <string name="retry">重试</string>
    <string name="third_party_web_page">第三方网页</string>
    <string name="resend">重新发送</string>
    <string name="s_will_resend">s后重新发送</string>
    <string name="cancel">取消</string>
    <string name="input_fit_length_password">请输入6~16位密码</string>
    <string name="input_fit_length_verification_code">请输入4位验证码</string>
    <string name="input_fit_length_account">请输入用户名</string>

    <string name="input_fit_type_password">请输入字母加数字组合密码</string>
    <string name="verification_code_sent_successfully">验证码发送成功</string>
    <string name="verification_code_sent_unsuccessfully">验证码发送失败</string>
    <string name="details">内容详情</string>
    <string name="reset_password">重置登录密码</string>
    <string name="password_not_match"> 两次密码不一致</string>
    <string name="my_bank_card">我的银行卡</string>
    <string name="to_withdraw">去提现</string>
    <string name="phone_with_colon">手机：</string>
    <string name="today_earnings">今日收益（元）</string>
    <string name="coin_count">金币（个）</string>

    <string name="nick_name">昵称</string>
    <string name="name">姓名</string>
    <string name="password_management">密码管理</string>
    <string name="phone_number">手机号</string>
    <string name="wechat_number">微信号</string>
    <string name="qq_number">QQ号</string>
    <string name="interest_tags">兴趣标签</string>
    <string name="sign_out">退出登录</string>
    <string name="verified">实名认证</string>
    <string name="personal_information">个人资料</string>
    <string name="contact">联系</string>
    <string name="invite_friends_protocol_1">用户通过摇钱树平台提供的分享路径邀请好友注册， 受邀者在邀请链接中输入注册手机号（微信号或QQ） 等相关资料并接受实名提交，即成功完成一次邀请。</string>
    <string name="invite_friends_protocol_2">每位用户的邀请次数无上限；受邀者需从未下单使 用摇钱树平台，每位用户最多可获得一次受邀</string>
    <string name="seniority_rule"><![CDATA[奖励规则>>]]></string>
    <string name="seniority_rule_hint">佣金按成功邀请好友来计算</string>
    <string name="invite_friends_earnings_operation">当好友从您的分享链接打开摇钱树，并进入APP成功 阅读广告,您和好友都将能获取收益</string>
    <string name="enjoy_revenue">邀请好友 立享收益</string>
    <string name="invite_now">立即邀请</string>
    <string name="invite_friends_text_2">邀请好友，你我都有</string>
    <string name="invite_friends_text_1">收益多多</string>
    <string name="wechat_friends">微信好友</string>
    <string name="wechat_moment">朋友圈</string>
    <string name="cumulative_income">累计收益</string>
    <string name="search_hint">搜索感兴趣的内容...</string>
    <string name="whether_to_unbind_weChat">是否解绑微信</string>
    <string name="whether_to_unbind_QQ">是否解绑QQ</string>
    <string name="modify_transaction_password">修改交易密码</string>
    <string name="modify_login_password">修改登录密码</string>
    <string name="save">保存</string>
    <string name="bind_bank_cards_hint">此绑定的银行卡将用于提现，仅支持绑定储蓄卡并请 绑定持卡人本人的银行卡。</string>
    <string name="bank_information">银行信息</string>
    <string name="account">户名</string>
    <string name="enter_real_name">请输入真实姓名</string>
    <string name="bank">银行</string>
    <string name="enter_bank_type">请输入银行类型</string>
    <string name="card_number">卡号</string>
    <string name="enter_bank_card_number">请输入银行卡号</string>
    <string name="enter_bank_error_card_number">银行卡号输入不正确</string>

    <string name="confirm_binding">确认绑定</string>
    <string name="modify_trading_password">修改交易密码</string>
    <string name="forget_trading_password">忘记交易密码</string>
    <string name="feature">特色</string>
    <string name="special_price">特价</string>
    <string name="investment">招商</string>
    <string name="mine">我的</string>
    <string name="messages_center">消息中心</string>
    <string name="notification_message">通知消息</string>
    <string name="finish">完成</string>
    <string name="fill_content">填写内容</string>
    <string name="binding_phone_number">绑定手机号</string>
    <string name="please_input_correct_format_mobile_number">请输入正确格式的手机号码</string>
    <string name="please_input_correct_format_verification_code">请输入正确格式验证码</string>
    <string name="same_phone_number">新绑定手机号与旧手机号相同</string>
    <string name="not_logged_in">未登录</string>
    <string name="set_init_password">设置初始密码</string>
    <string name="copied_to_the_cut_version">已复制到剪切版</string>
    <string name="Call">呼叫</string>
    <string name="tab_again_exit_app">再按一次退出程序</string>
    <string name="more_benefit_are_waiting_for">更多福利等你来</string>
    <string name="got_it">我知道了</string>
    <string name="gold_coin_detail">金币明细</string>
    <string name="get_coins">领取金币</string>


</resources>
