<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.advertisement.cashcow.widget.NavigationBar
        android:id="@+id/nv_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationBarRightText="@string/save"
        app:navigationBarRightTextColor="#333333"
        app:navigationBarTitle="@string/nick_name" />

    <EditText
        android:id="@+id/et_nick_name"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColorHint="#ffc4c4c4"
        android:hint="@string/fill_content"
        android:textColor="#ffc4c4c4"
        android:textSize="16sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nv_bar" />

    <include
        android:id="@+id/ic_mask"
        layout="@layout/include_chrysanthemum_loading_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>