<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <com.advertisement.cashcow.widget.NavigationBar
        android:id="@+id/nv_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationBarTitle="@string/invite_friends" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nv_bar"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView41"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                app:srcCompat="@mipmap/invite_friends_bg_invite_friend"
                tools:layout_editor_absoluteX="37dp"
                tools:layout_editor_absoluteY="110dp" />

            <TextView
                android:id="@+id/textView67"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/invite_friends_text_1"
                android:textColor="#ff333333"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/textView68"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/invite_friends_text_2"
                android:textColor="#ff333333"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_invite_friends"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginEnd="23dp"
                android:layout_marginStart="23dp"
                android:layout_marginTop="23dp"
                android:background="@drawable/selector_register_solid"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/invite_now"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="80dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="414dp">

                <ImageView
                    android:id="@+id/imageView42"
                    android:layout_width="32dp"
                    android:layout_height="18dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textView69"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/invite_friends_icon_adorn" />

                <ImageView
                    android:id="@+id/imageView43"
                    android:layout_width="32dp"
                    android:layout_height="18dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView69"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/invite_friends_icon_adorn" />

                <TextView
                    android:id="@+id/textView69"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/enjoy_revenue"
                    android:textColor="#ffff8b00"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <TextView
                android:id="@+id/textView70"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:text="@string/invite_friends_earnings_operation"
                android:textColor="#ff8f8f8f"
                android:textSize="14sp"
                tools:layout_editor_absoluteX="176dp"
                tools:layout_editor_absoluteY="535dp" />


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="34dp"
                android:background="@drawable/shape_invite_friend_frame"
                tools:layout_editor_absoluteX="131dp"
                tools:layout_editor_absoluteY="559dp">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="match_parent"
                    android:layout_height="118dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/invite_friends_flow_chat" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/seniority_rule_hint"
                    android:textColor="#ff333333"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView9" />

                <TextView
                    android:id="@+id/tv_reward_rule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="38dp"
                    android:text="@string/seniority_rule"
                    android:textColor="#fffe8a00"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView16" />

                <View
                    android:id="@+id/view12"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginEnd="8dp"
                    android:background="#fffe8a00"
                    app:layout_constraintEnd_toEndOf="@+id/textView19"
                    app:layout_constraintStart_toStartOf="@+id/textView19"
                    app:layout_constraintTop_toBottomOf="@+id/textView19" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/invite_friends_protocol_1"
                    android:textColor="#ff8f8f8f"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/view13"
                    app:layout_constraintTop_toBottomOf="@+id/textView16" />

                <View
                    android:id="@+id/view13"
                    android:layout_width="4dp"
                    android:layout_height="4dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="3dp"
                    android:background="#fffe8a00"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView23" />

                <View
                    android:id="@+id/view14"
                    android:layout_width="4dp"
                    android:layout_height="4dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="3dp"
                    android:background="#fffe8a00"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView24" />

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/invite_friends_protocol_2"
                    android:textColor="#ff8f8f8f"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textView23"
                    app:layout_constraintStart_toStartOf="@+id/textView23"
                    app:layout_constraintTop_toBottomOf="@+id/textView23" />
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>

    </ScrollView>



</android.support.constraint.ConstraintLayout>