<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <com.advertisement.cashcow.widget.NavigationBar
        android:id="@+id/nv_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navigationBarTitle="@string/reset_password" />


    <include
        android:id="@+id/ic_mask"
        layout="@layout/include_chrysanthemum_loading_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="32dp"
        android:text="@string/login_phone_number"
        android:textColor="#ff666666"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nv_bar" />

    <EditText
        android:id="@+id/et_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="14dp"
        android:textColor="#ff333333"
        android:textSize="18sp"
        android:background="@null"
        android:inputType="phone"
        android:lines="1"
        android:maxLength="11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <View
        android:id="@+id/view5"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="1dp"
        android:background="#E6E6E6"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_count" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/verification_code"
            android:textColor="#ff666666"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="80dp"
            android:background="@null"
            android:lines="1"
            android:maxLength="4"
            android:hint="@string/input_verification_code"
            android:inputType="number"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_verification_code"
            android:layout_width="87dp"
            android:layout_height="27dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="27dp"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/get_verification_code"
            android:textSize="12sp"
            android:background="@drawable/selector_register_solid"
            android:textColor="#ffffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="获取验证码" />
    </android.support.constraint.ConstraintLayout>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:background="#E6E6E6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_marginTop="27dp"
        android:background="#E6E6E6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/new_password"
            android:textColor="#ff666666"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="80dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/input_new_password"
            android:inputType="textPassword"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:background="#E6E6E6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout1" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view3">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/confirm"
            android:textColor="#ff666666"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="确认" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="80dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/input_new_password_again"
            android:inputType="textPassword"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>


    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:background="#E6E6E6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="329dp"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:textColor="#ffffffff"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/selector_register_solid"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        android:text="@string/confirm" />


</android.support.constraint.ConstraintLayout>